<resources>
    <string name="app_name">Projekt</string>
    <string name="start">START</string>
    <string name="przycisk">Przycisk</string>
    <string name="witaj">Witaj</string>
    <string name="test">TEST</string>
    <string name="ucz_si">UCZ SIĘ</string>
    <string name="s_owa">Słowa</string>
    <string name="dodaj_swoje_slowo">DODAJ SWOJE SLOWO</string>
    <string name="zapisz">ZAPISZ</string>
    <string name="tlumaczenie">tlumaczenie</string>
    <string name="slowo">slowo</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="zacznij_nauk">Zacznij Naukę</string>
    <string name="poziom_trudno_ci_1">Poziom trudności: 1</string>
    <string name="poziom_trudno_ci_2">Poziom trudności: 2</string>
    <string name="poziom_trudno_ci_3">Poziom trudności: 3</string>
    <string name="poziom_trudno_ci_4">Poziom trudności: 4</string>
    <string name="w_asne_odpowiedzi">Własne odpowiedzi</string>
    <string name="wybierz_w_a_ciw_tlumaczenie">Wpisz właściwe tłumaczenie</string>
    <string name="nast_pne_s_owo">Następne słowo</string>
    <string name="sprawd">Sprawdź</string>
    <string name="wybierz_poziom_trudno_ci">Wybierz poziom trudności</string>
    <string name="wybierz_w_a_ciw_odpowiedzz">Wybierz właściwą odpowiedź</string>
    <string name="zako_cz_test">Zakończ Test</string>
    <string name="zdoby_e_tyle_punt_w">ZDOBYŁEŚ TYLE PUNTÓW</string>
    <string name="gratulacje">GRATULACJE</string>
    <string name="zako_cz">Zakończ</string>
    <string name="m_w">mów</string>
    <string name="czy_jestes_pewny">Czy jesteś pewny że chcesz usunąć to słowo?</string>
    <string name="usuwanie_elementu">Usuwanie słówka</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="czy_pewny_koniec_testu">Czy jesteś pewny aby skończyć test?</string>
    <string name="koniec_testu">Koniec testu</string>
    <string name="s_ownik_diki">Słownik DIKI</string>
    <string name="youtube_dla_ambitnych">Youtube dla ambitnych</string>
    <string name="menu">MENU</string>
    <string name="test_o_naj_atwiejszym_poziomie_trudno_ci">Test o najłatwiejszym poziomie trudności</string>
    <string name="test_o_rednim_poziomie_trudno_ci">Test o średnim poziomie trudności</string>
    <string name="test_o_najwy_szym_poziomie_trudno_ci">Test o najwyższym poziomie trudności</string>
    <string name="zacznij_test">Zacznij test</string>
    <string name="wybierz_spos_b_nauki">Wybierz sposób nauki</string>
    <string name="wyb_r_spo_r_d_kilki_dost_pnych_odpowiedzi">Wybór spośród kilki dostępnych odpowiedzi</string>
    <string name="wpisywanie_odpowiedzi">Wpisywanie odpowiedzi</string>
    <string name="dobra_odpo">DOBRA ODPOWIEDŹ</string>
    <string name="zla_odpo">ZŁA ODPOWIEDŹ</string>
</resources>