<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    tools:context=".UczsieActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="casual"
        android:text="@string/wybierz_spos_b_nauki"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wyb_r_spo_r_d_kilki_dost_pnych_odpowiedzi"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <Switch
            android:id="@+id/poziom_trudnosci_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poziom_trudno_ci_1"
            android:layout_margin="5dp"
            android:paddingVertical="10sp"
            android:background="@drawable/custom_border"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <Switch
            android:id="@+id/poziom_trudnosci_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poziom_trudno_ci_2"
            android:layout_margin="5dp"
            android:paddingVertical="10sp"
            android:background="@drawable/custom_border"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <Switch
            android:id="@+id/poziom_trudnosci_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poziom_trudno_ci_3"
            android:layout_margin="5dp"
            android:paddingVertical="10sp"
            android:background="@drawable/custom_border"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <Switch
            android:id="@+id/poziom_trudnosci_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poziom_trudno_ci_4"
            android:layout_margin="5dp"
            android:paddingVertical="10sp"
            android:background="@drawable/custom_border"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wpisywanie_odpowiedzi"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <Switch
            android:id="@+id/wlasne_odpowiedzi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/w_asne_odpowiedzi"
            android:layout_margin="5dp"
            android:paddingVertical="10sp"
            android:background="@drawable/custom_border"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/zaczynajmy_uczenie"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:background="@drawable/custom_button"
        android:text="@string/zacznij_nauk"
        android:textColor="@color/white"
        app:cornerRadius="25sp" />

</LinearLayout>