<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Testy.Wynik_Testu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:text="@string/gratulacje"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:text="@string/zdoby_e_tyle_punt_w"/>
    <TextView
        android:id="@+id/wynik_testu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <Button
        android:id="@+id/wroc_do_testow"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cornerRadius="25sp"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:text="@string/zako_cz_test"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_rawRes="@raw/thumbs_up"
        android:layout_margin="30dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>
</LinearLayout>